# ylab

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.envs/: .env.example
YLab_task/: asgi.py  local.example.py  local.py  prod.py  settings.py  urls.py  wsgi.py
main/: models.py  serializers.py  tests.py  urls.py  views.py
main/migrations/: 0001_initial.py
